2007-07-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/editor.c:
   Fix possible selection errors on commenting multiple lines when using
   CR/LF line endings.
 * doc/geany.docbook, src/editor.c, src/editor.h, src/keybindings.c,
   src/keybindings.h:
   Add keybindings for smart indent and indent/deindent by one space.
 * configure.in:
   Fix failing linking on some systems (needs to be solved cleanly).


2007-07-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/dialogs.c, src/callbacks.c:
   Use Rename button instead of checkbox for Save As dialog.
   Add tooltips for Save As dialog's other options.
 * src/callbacks.c:
   Fix segfault (oops).


2007-07-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/treeviews.c:
   Prevent warning when closing files when Geany is busy (e.g. pressing
   Ctrl-W when opening files).
 * src/main.c:
   If -i, --new-instance options are passed, disable loading & saving of
   session files.
 * src/plugins.c:
   Remove init_function_pointers(), use static initializers.
 * plugins/classbuilder.c, src/plugindata.h, src/plugins.c:
   Make Class Builder 'Create Class' dialog use Glade-style frames and
   remove some unnecessary border width.
   Add ui->dialog_vbox_new() and ui->frame_new_with_alignment()
   functions to the plugin API.
 * src/ui_utils.h, src/utils.h, src/project.c, src/geany.h,
   src/ui_utils.c:
   Add ui_table_add_row() for easily adding widgets to a GtkTable, and
   use it in project_new().
   Group 'generic' functions related to GTK+ together at the top of
   ui_utils.h.
   Make sure G_GNUC_NULL_TERMINATED is defined in geany.h.


2007-07-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/editor.c:
   Use again the usual, previous way of line scrolling and use
   SCI_SETXCARETPOLICY for horizontal scrolling.
 * src/filetypes.c:
   Add shebang-like detection for PHP files starting with "<?php".


2007-07-12  Nick Treleaven  <nick.treleaven@btinternet.com>
